# homework_web_6

./: README.md  create_tables.sql  main.py  pyproject.toml  query.py  query_1.sql  query_10.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
