[tool.poetry]
name = "homework-web-6"
version = "0.1.0"
description = ""
authors = ["ivan-markovskyi <ivan.markovskyi.in@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "^19.12.0"
psycopg2 = "^2.9.9"
connect = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
